# AETHEROS

backend/: Dockerfile  requirements.txt  test_phase_3.py  test_phase_4.py
backend/app/: main.py
backend/app/agents/: macro_scout.py  market_analyst.py  sentiment_spy.py  supervisor_crew.py
backend/app/agents/core/: agent_base.py  llm_backbone.py
backend/app/agents/tools/: search_tools.py  yfinance_tools.py
backend/app/core/: config.py  llm_config.py
backend/app/db/: models.py  session.py
backend/app/graph/: executor.py  nodes.py  state.py
backend/app/security/: auth.py
goldmine_core/: Cargo.toml
goldmine_core/src/: lib.rs
