[package]
name = "goldmine_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "goldmine_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# High performance collections for Top-K sliding window
hashbrown = "0.14" 
